# pm-ai-signal-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  ANTIGRAVITY_SESSION_1.md  ARCHITECTURE.md  BUILD_GUIDE.md  README.md  WRITEUP.md  pyproject.toml
.agents/: CONTEXT.md  hooks.json
.agents/scripts/: validate_memory_write.py  validate_search.py
.agents/skills/japan-context/: SKILL.md
.agents/skills/japan-context/resources/: JAPAN_REFERENCE.txt
app/: agent.py  telegram_poll.py
app/.adk/: session.db
tests/: test_agent.py
tests/eval/: judge-instruction.md
tests/eval/datasets/: signals-dataset.json
