[project]
name = "pm-ai-signal-tracker"
version = "0.1.0"
description = "Daily AI signal digest for PMs working on AI products in Japan"
requires-python = ">=3.11"

dependencies = [
    "google-adk>=2.0.0a0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.5.0",
    "semgrep>=1.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
verbose = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
